# game-catalog-builder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  run.py  run_all.py  run_hltb.py  run_igdb.py  run_rawg.py  run_steam.py  run_steamspy.py
data/: credentials.example.yaml  metrics-registry.example.yaml  production_tiers.example.yaml  production_tiers.yaml
docs/: available-metrics.md  how-it-works.md  matching.md  metrics-registry.md  provider-field-catalog.yaml  provider-field-reference.md  provider-fields.md  provider-json-schema.md
docs/examples/: README.md
docs/improvements/: README.md  metrics-registry-and-json-output.md  output-field-configuration.md  provider-enhancements.md  provider-unused-fields.md  reach-popularity-production-ratings.md  tried-and-rejected.md  two-stage-identity-then-enrich.md
docs/providers/: README.md  provider-field-catalog.yaml  provider-field-reference.md  provider-fields.md  provider-json-schema.md
game_catalog_builder/: __init__.py  cli.py  config.py  fetch_provider_examples.py  generate_provider_field_reference.py  schema.py
game_catalog_builder/analysis/: __init__.py  import_diagnostics.py  resolve.py
game_catalog_builder/clients/: __init__.py  hltb_client.py  http_client.py  igdb_client.py  parse.py  rawg_client.py  steam_client.py  steamspy_client.py  wikidata_client.py  wikipedia_pageviews_client.py  wikipedia_summary_client.py
game_catalog_builder/diagnostics/: __init__.py  import_diagnostics.py  resolve.py
game_catalog_builder/metrics/: csv_render.py  jsonl.py  registry.py
game_catalog_builder/pipelines/: artifacts.py  common.py  context.py  enrich_pipeline.py  export_pipeline.py  helpers.py  import_pipeline.py  metrics_registry_pipeline.py  protocols.py  provider_clients.py  resolve_pipeline.py  sync_pipeline.py
game_catalog_builder/tools/: __init__.py  collect_production_tiers.py  fetch_provider_examples.py  (+3 more)
modules/: hltb_client.py  igdb_client.py  merger.py  rawg_client.py  steam_client.py  steamspy_client.py  utilities.py
tests/: test_batch_methods_use_cache.py  test_collect_production_tiers.py  test_cross_provider_refs.py  test_details_negative_caching.py  test_enrich_in_place_base.py  test_export_pipeline.py  test_extraction_logic.py  test_fill_eval_tags_preserves_index.py  test_fuzzy_score.py  test_hltb_get_by_id.py  test_hltb_query_variants.py  test_hltb_year_paren_fallback.py  test_identity_map.py  test_identity_preserve_user_fields.py  test_igdb_batching.py  test_igdb_candidate_selection.py  test_igdb_year_hint_avoids_stale_yearless_cache.py  test_igdb_year_hint_filtering.py  test_import_cross_id_diagnostics.py  test_import_diagnostics_registry_mapping.py  test_import_eval_tags.py  test_import_eval_tags_metadata_checks.py  test_import_hltb_id_without_diagnostics.py  test_import_inferred_steam_appid_rejected_when_not_game.py  test_import_pinned_steam_invalid_id_retriggers_search.py  test_import_safety_auto_unpin_recomputes_tags.py  test_import_safety_auto_unpin_requires_consensus.py  test_import_steam_inferred_appid_skips_search.py  test_import_steam_rejection_tag.py  test_metrics_jsonl.py  test_metrics_registry_selection.py  test_normalize.py  test_pick_best_match.py  test_production_tiers_updater.py  test_provider_caches.py  test_query_negative_cache.py  test_rawg_candidate_selection.py  test_request_failures_do_not_negative_cache.py  test_review_csv.py  test_review_registry_driven.py  (+29 more)
(+32 files in other folders)
