[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "game-catalog-builder"
version = "0.1.0"
description = "Enrich video game catalogs with metadata from multiple APIs (IGDB, RAWG, Steam, SteamSpy, HowLongToBeat)"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0.0",
    "howlongtobeatpy>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=7.4",
    "mypy>=1.7",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
gcb = "game_catalog_builder.cli:main"

[tool.setuptools]
packages = ["game_catalog_builder", "game_catalog_builder.clients", "game_catalog_builder.utils"]

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = [".venv", "data", "docs/examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["game_catalog_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false
no_implicit_optional = true
ignore_missing_imports = true
